--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     <container class="flex flex-row w-64 justify-around">
         {{#if logged_in}}
         <h1 class="font-bold text-white ml-5 mr-3" href="/profile"><a href="/profile">Profile</a></h1>
-        <h1 class="font-bold text-white mr-3"><a href="#" id="logout">Logout</a></h1>
+        <h1 class="font-bold text-white mr-3"><a href="/" id="logout">Logout</a></h1>
         <h1 class="text-white font-bold mr-3"><a href="/api/post">Post</a></h1>
         {{else}}
         <h1 class="font-bold text-white mr-3"><a href="/login">Login</a></h1>
