--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,8 @@
 <div class="row my-5">
   <div class="col-md-6">
-    <h2>Login</h2>
+    <h2 class="text-2xl m-3 text-blue font-bold">Login</h2>
 
-    <form class="form login-form">
+    <form class="form login-form grid w-20">
       <div class="form-group">
         <label for="username-login">Username:</label>
         <input class="form-input" type="text" id="username-login" />
@@ -12,14 +12,15 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary m-5 p-2 border-solid border-2 border-sky-500 rounded-md
+        bg-sky-500/100 text-white font-bold" type="submit">Login</button>
       </div>
     </form>
   </div>
   <div class="col-md-6">
-    <h2>Sign up</h2>
+    <h2 class="text-2xl m-3 text-blue font-bold">Sign up</h2>
 
-    <form class="form signup-form">
+    <form class="form signup-form grid w-20">
       <div class="form-group">
         <label for="username-signup">Email:</label>
         <input class="form-input" type="text" id="username-signup" />
@@ -29,7 +30,12 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">Sign up</button>
+        <label for="username-signup">Name:</label>
+        <input class="form-input" type="text" id="name-signup" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary m-5 p-2 border-solid border-2 border-sky-500 rounded-md
+        bg-sky-500/100 text-white font-bold" type="submit">Sign up</button>
       </div>
     </form>
   </div>
