--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,14 +13,14 @@
   bg-gradient-to-r from-cyan-400 to-blue-500 drop-shadow-xl">
     <h1 class="px-8 text-3xl text-white font-bold">Tech Blog</h1>
     <container class="flex flex-row w-64 justify-around">
+        <h1 class="text-white font-bold ml-5 mr-3"><a href="/">Home</a></h1>
         {{#if logged_in}}
-        <h1 class="font-bold text-white ml-5 mr-3" href="/profile"><a href="/profile">Profile</a></h1>
-        <h1 class="font-bold text-white mr-3"><a href="/" id="logout">Logout</a></h1>
+        <h1 class="font-bold text-white mr-3" href="/profile"><a href="/profile">Profile</a></h1>
         <h1 class="text-white font-bold mr-3"><a href="/api/post">Post</a></h1>
+        <h1 class="font-bold text-white mr-3"><a href="/" id="logout">Logout</a></h1>
         {{else}}
         <h1 class="font-bold text-white mr-3"><a href="/login">Login</a></h1>
         {{/if}}
-      <h1 class="text-white font-bold mr-3"><a href="/">Home</a></h1>
     </container>
   </container>
   <div>
