--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -8,7 +8,7 @@
     <p>
       {{post.post}}
     </p>
-    <p class="text-gray-500 text-sm">Created by {{post.user.name}}</p>
+    <p class="text-gray-500 text-sm">Created by {{post.user.name}} {{format_date date_created}}</p>
   </div>
 </div>
 {{/each}}
