--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,14 +1,14 @@
 {{#each posts as |post| }}
-<div class="grid auto-cols-auto text-black gap-6 max-w-3xl border-4 my-5 bg-slate-100 rounded-lg p-5 drop-shadow-2xl text-xl">
+<div class="grid auto-cols-auto text-black gap-6 max-w-3xl border-4 my-5 bg-slate-100 rounded-lg p-5 drop-shadow-2xl text-xl auto-rows-auto">
   <div>
     <p>
       <!-- Pass needed_funding value to the helper function -->
-      <span class="font-bold text-2xl">{{post.title}}</span>
+      <a href="/post/{{id}}" class="font-bold text-2xl">{{post.title}}</a>
     </p>
     <p>
       {{post.post}}
     </p>
-    <p class="text-gray-500 text-sm">Created by {{post.user.name}} {{format_date date_created}}</p>
+    <p class="text-gray-500 text-sm break-words">Created by {{post.user.name}} {{format_date date_created}}</p>
   </div>
 </div>
 {{/each}}
