--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,6 +1,6 @@
-<h2 class="text-3xl my-3">Welcome, {{name}}</h2>
+<h2 class="text-3xl my-8">Welcome, {{name}}</h2>
 
-<h3 class="my-10 text-3xl">Create a New Post:</h3>
+<h3 class="my-10 text-3xl font-bold">Create a New Post:</h3>
 <form class="mt-8 max-w-md new-post-form">
     <div class="grid grid-cols-1 gap-6">
         <label for="title" class="block text-xl">Title:</label>
@@ -11,21 +11,21 @@
         <textarea type="text" class="mt-1 block w-full" id="post" placeholder="Type a post..."></textarea>
     </div>
     <div class="form-group col-4">
-        <button type="submit" id='post-button' class="rounded-md bg-blue-300 p-2">Create</button>
+        <button type="submit" id='post-button' class="rounded-md bg-blue-300 p-2 drop-shadow-md	">Create</button>
     </div>
 </form>
 
 
-  <div class="col-md-6 project-list">
-    <h3>Current Posts:</h3>
+  <div class="col-md-6 project-list my-4">
+    <h3 class="text-3xl font-bold">Current Posts:</h3>
 
     {{#each userposts as |userpost|}}
-    <div class="row mb-2">
+    <div class="row mb-2 bg-blue-400 my-5 border-solid border-2 border-gray-500 rounded-lg p-3 w-1/2 drop-shadow-md">
       <div class="col-md-8">
         <h4><a>{{userpost.title}}</a></h4>
       </div>
       <div class="col-md-4">
-        <button class="btn btn-sm btn-danger" data-id="{{userpost.id}}">DELETE</button>
+        <button class="bg-red-400 rounded-md p-1 drop-shadow-md deleteButton" data-id="{{userpost.id}}">DELETE</button>
       </div>
     </div>
     {{/each}}
